api-auth/rolling-update/api-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-auth
  namespace: openmsa    
  
  labels:
    app: api-auth
    
   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-auth
  template:
    metadata:
      
      labels:
        app: api-auth     
      

    spec:
      containers:
        - name: api-auth
          image: oscka/api-auth
          ports:
          - name: http
            containerPort: 8080
