api-auth/rolling-update/api-auth-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-auth-svc
  namespace: fms
spec:
  selector:
    app: api-auth
  
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
